# trader-helper-bing

./: .gitignore  HenryFlowDashboard.py
Criterion/: CriterionOrchestrator.py  CriterionUpdateDBtables.py  DailyNukeOutputChoice.py  ReadmeCriterionFolder.md  UpdateAndForecastFundy.py  UpdateCriterionHenryFlows.py  UpdateCriterionLNG.py  UpdateCriterionLocs.py  UpdateCriterionNuclear.py  UpdateCriterionStorage.py
DawnStorage/: DawnYellowForecast.json  dawnlight_yellow_predictor_pro.py
EIAApi/: EIAChangesLevelsUpdater.py  EIAMonthlyValuesUpdater.py
EIAGuesser/: CompileInfo.py  EIA_Forecaster_Adaptive_Weather.py  MTP2.py  MTP2_new.py  MTP3.py  MTP3_new.py  MTP4_JS.py  requirements.txt
GPTCOT/: .env.example  README.md  pyproject.toml  requirements.txt
GPTCOT/src/gptcot/: __init__.py  __main__.py  cli.py  config.py  forecasting.py  forward_curve.py  market_analysis.py  spread_analysis.py  utils.py
GPTCOT/src/gptcot/contracts/: __init__.py  month_label.py  resolution.py
GPTCOT/src/gptcot/features/: __init__.py  rolling_stats.py
GPTCOT/src/gptcot/io/: __init__.py  loaders.py  paths.py  validators.py
GPTCOT/src/gptcot/pipeline/: __init__.py  build_dataset.py
GPTCOT/src/gptcot/reporting/templates/: market_report.html
GPTCOT/tests/: test_analog_buckets.py  test_extreme_threshold_detection.py  test_forecasting_importances.py  test_forecasting_training.py  test_forward_curve.py  test_month_label.py  test_pipeline_smoke.py  test_report_generation.py  test_resolution.py  test_rolling_percentile.py  test_season_assignment.py  test_sr_levels.py  test_storage_logic.py
(+89 files in other folders)
